Initial commit for psychology experiment.

--- a/src/dataware-client-skeleton/client.cfg
+++ b/src/dataware-client-skeleton/client.cfg
@@ -1,12 +1,12 @@
 [DatawareClient]
-ROOT_PATH   = /var/dataware-client-skeleton
+ROOT_PATH   = /home/ec2-user/dataware/dataware.client-skeleton/src/dataware-client-skeleton
 SECRET_KEY  = A_SECRET_KEY
-PORT	    = 9090
-URI         = mysql://_DBC_DBUSER_:_DBC_DBPASS_@127.0.0.1:3306/_DBC_DBNAME_ 
-CATALOG     = http://localhost:9080
-REALM       = http://localhost:9090
+PORT	    = 9000
+URI         = mysql://dataware:d8tawar3@127.0.0.1:3306/dataware 
+CATALOG     = http://ec2-54-211-122-205.compute-1.amazonaws.com:8080
+REALM       = http://ec2-54-211-128-129.compute-1.amazonaws.com:9000
 CLIENTNAME  = herokuclient
 #catalog must provide an api for us to get these!
-RESOURCEUSERNAME = tlodgecatalog
+RESOURCEUSERNAME = testuser
 RESOURCENAME     = homework
 EXTENSION_COOKIE = tpc_logged_in
