Fix for the url validation and web page count.

--- a/src/dataware-client-skeleton/client.cfg
+++ b/src/dataware-client-skeleton/client.cfg
@@ -5,6 +5,7 @@ PORT	    = 9000
 URI         = mysql://dataware:d8tawar3@127.0.0.1:3306/dataware 
 CATALOG     = http://ec2-54-211-122-205.compute-1.amazonaws.com:8080
 REALM       = http://ec2-54-211-128-129.compute-1.amazonaws.com:9000
+RESOURCE    = http://ec2-54-227-145-232.compute-1.amazonaws.com:9000
 CLIENTNAME  = herokuclient
 #catalog must provide an api for us to get these!
 RESOURCEUSERNAME = testuser
